--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,9 @@ theme = 'hugo-bearblog'
 # Basic metadata configuration for your blog.
 title = "Hugo ʕ•ᴥ•ʔ Bear Blog"
 author = "Alexandra Davis"
-copyright = "Copyright © 2020, Alexandra Davis."
+copyright = "Copyright © 2021, Alexandra Davis."
 languageCode = "en-US"
+
 
 # Generate a nice robots.txt for SEO
 enableRobotsTXT = true
@@ -18,6 +19,7 @@ ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
   blog = "/:slug/"
   tags = "/blog/:slug"
+  about = "/:slug/"
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
